--- a/tandylayout.ui
+++ b/tandylayout.ui
@@ -35,9 +35,6 @@
         <property name="text">
          <string>2</string>
         </property>
-        <property name="shortcut">
-         <string>Ctrl+2</string>
-        </property>
        </widget>
       </item>
       <item>
@@ -47,9 +44,6 @@
         </property>
         <property name="text">
          <string>3</string>
-        </property>
-        <property name="shortcut">
-         <string>Ctrl+3</string>
         </property>
        </widget>
       </item>
@@ -61,9 +55,6 @@
         <property name="text">
          <string>4</string>
         </property>
-        <property name="shortcut">
-         <string>Ctrl+4</string>
-        </property>
        </widget>
       </item>
       <item>
@@ -73,9 +64,6 @@
         </property>
         <property name="text">
          <string>5</string>
-        </property>
-        <property name="shortcut">
-         <string>Ctrl+5</string>
         </property>
        </widget>
       </item>
@@ -87,9 +75,6 @@
         <property name="text">
          <string>6</string>
         </property>
-        <property name="shortcut">
-         <string>Ctrl+6</string>
-        </property>
        </widget>
       </item>
       <item>
@@ -99,9 +84,6 @@
         </property>
         <property name="text">
          <string>7</string>
-        </property>
-        <property name="shortcut">
-         <string>Ctrl+7</string>
         </property>
        </widget>
       </item>
@@ -113,9 +95,6 @@
         <property name="text">
          <string>8</string>
         </property>
-        <property name="shortcut">
-         <string>Ctrl+8</string>
-        </property>
        </widget>
       </item>
       <item>
@@ -126,9 +105,6 @@
         <property name="text">
          <string>9</string>
         </property>
-        <property name="shortcut">
-         <string>Ctrl+9</string>
-        </property>
        </widget>
       </item>
       <item>
@@ -138,9 +114,6 @@
         </property>
         <property name="text">
          <string>10</string>
-        </property>
-        <property name="shortcut">
-         <string>Ctrl+0</string>
         </property>
        </widget>
       </item>
@@ -179,9 +152,6 @@
         <property name="text">
          <string>🡅</string>
         </property>
-        <property name="shortcut">
-         <string>W</string>
-        </property>
        </widget>
       </item>
       <item row="1" column="0" alignment="Qt::AlignHCenter">
@@ -208,9 +178,6 @@
         </property>
         <property name="text">
          <string>🡄</string>
-        </property>
-        <property name="shortcut">
-         <string>A</string>
         </property>
        </widget>
       </item>
@@ -239,9 +206,6 @@
         <property name="text">
          <string>✖</string>
         </property>
-        <property name="shortcut">
-         <string>R</string>
-        </property>
        </widget>
       </item>
       <item row="2" column="1" alignment="Qt::AlignHCenter">
@@ -268,9 +232,6 @@
         </property>
         <property name="text">
          <string>🡇</string>
-        </property>
-        <property name="shortcut">
-         <string>S</string>
         </property>
        </widget>
       </item>
@@ -299,9 +260,6 @@
         <property name="text">
          <string>🡆</string>
         </property>
-        <property name="shortcut">
-         <string>D</string>
-        </property>
        </widget>
       </item>
      </layout>
@@ -328,9 +286,6 @@
         <property name="text">
          <string>Tele</string>
         </property>
-        <property name="shortcut">
-         <string>E</string>
-        </property>
        </widget>
       </item>
       <item>
@@ -353,9 +308,6 @@
         <property name="text">
          <string>Wide</string>
         </property>
-        <property name="shortcut">
-         <string>Q</string>
-        </property>
        </widget>
       </item>
      </layout>
@@ -364,6 +316,9 @@
      <layout class="QGridLayout" name="controlsLayout">
       <item row="1" column="3" alignment="Qt::AlignHCenter">
        <widget class="QSlider" name="wbslider">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
@@ -384,10 +339,19 @@
         <property name="checkable">
          <bool>true</bool>
         </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="1" column="1" alignment="Qt::AlignHCenter">
        <widget class="QSlider" name="irisslider">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="maximum">
+         <number>50</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
@@ -395,6 +359,18 @@
       </item>
       <item row="1" column="2" alignment="Qt::AlignHCenter">
        <widget class="QSlider" name="gainslider">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="minimum">
+         <number>12</number>
+        </property>
+        <property name="maximum">
+         <number>22</number>
+        </property>
+        <property name="pageStep">
+         <number>3</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
@@ -408,6 +384,9 @@
         <property name="checkable">
          <bool>true</bool>
         </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="2" column="1" colspan="2">
@@ -419,12 +398,24 @@
          <bool>true</bool>
         </property>
         <property name="checked">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
        </widget>
       </item>
       <item row="1" column="0" alignment="Qt::AlignHCenter">
        <widget class="QSlider" name="focusslider">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="maximum">
+         <number>65024</number>
+        </property>
+        <property name="singleStep">
+         <number>100</number>
+        </property>
+        <property name="pageStep">
+         <number>500</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
@@ -463,6 +454,15 @@
       </item>
       <item row="1" column="4" alignment="Qt::AlignHCenter">
        <widget class="QSlider" name="gammaslider">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="maximum">
+         <number>7</number>
+        </property>
+        <property name="pageStep">
+         <number>1</number>
+        </property>
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
@@ -474,6 +474,9 @@
          <string>Auto</string>
         </property>
         <property name="checkable">
+         <bool>true</bool>
+        </property>
+        <property name="checked">
          <bool>true</bool>
         </property>
        </widget>
@@ -547,8 +550,6 @@
     <property name="title">
      <string>Port</string>
     </property>
-    <addaction name="actionCOM1"/>
-    <addaction name="actionCOM2"/>
    </widget>
    <widget class="QMenu" name="menuSet_Preset">
     <property name="title">
